Bring back the 'release' export
The Test::Builder conversion makes use of this.

--- a/README
+++ b/README
@@ -171,6 +171,37 @@ EXPORTS
                 $ctx->release;
             }
 
+  release($;$)
+    Usage:
+
+    release $ctx;
+    release $ctx, ...;
+
+    This is intended as a shortcut that lets you release your context and
+    return a value in one statement. This function will get your context,
+    and an optional return value. It will release your context, then return
+    your value. Scalar context is always assumed.
+
+        sub tool {
+            my $ctx = context();
+            ...
+
+            return release $ctx, 1;
+        }
+
+    This tool is most useful when you want to return the value you get from
+    calling a function that needs to see the current context:
+
+        my $ctx = context();
+        my $out = some_tool(...);
+        $ctx->release;
+        return $out;
+
+    We can combine the last 3 lines of the above like so:
+
+        my $ctx = context();
+        release $ctx, some_tool(...);
+
   intercept(&)
     Usage:
 
