--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Bring back 'release' export of Test2.
+
 0.000007  2015-12-20 12:09:04-08:00 America/Los_Angeles
 
     - Fix version number string
