--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix typo in Test2::Event
+
 0.000008  2015-12-21 09:54:58-08:00 America/Los_Angeles
 
     - Bring back 'release' export of Test2.
