Restore classic behavior for verbose harness
In an early refactor this was changed from a what is essentially a print
DIAG "\n"; to a diag("\n"). Unforunately this is not a 1-for-1 change
and resulted in a cascade of edge cases. The dge-cases are being
reverted in Test2, and this change is being reverted here.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix diag/note bugs from refactor
+
 1.302013_003 2015-12-22 09:41:46-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix bug in details() structure for subtests when the parent is todo
