--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+    - Update for Test2 0.000013
+    - Delay loading Data::Dumper
+    - Test2::API::test2_no_wait(1) when threads/forking are on
+    - Fix Test::Tester to use context
+    - More downstream dists for testing
+
 1.302013_005 2015-12-29 13:01:32-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Updates for Test2 0.000012
