--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Silence a warning in older perls (warning breaks Test-Simple tests)
+
 0.000013  2016-01-06 11:12:21-08:00 America/Los_Angeles
 
     - Remove diag from inside todo (separation of concerns, less TAP influence)
