--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
     - Better encapsulation of API::Instance
     - API methods to get lists of hooks
     - Minor fixes to IPC shm logic
+    - Preload event types when API is loaded
+    - Added IPC acceptance tests
 
 0.000015  2016-01-07 19:26:58-08:00 America/Los_Angeles
 
