--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix documentation problem
+
 0.000014  2016-01-10 22:42:56-08:00 America/Los_Angeles
 
     - Initial conversion from Test::Stream
