--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Add grab tool
+    - Fix documentation
+
 0.000017  2016-01-12 05:54:43-08:00 America/Los_Angeles
 
     - Fix poorly written test
