Change how contexts stack
 * Nested calls no longer return the original context, they return a clone
 * Context.pm now has DESTROY that checks for misuse
 * Spawned contexts now now where they were spawned
 * Spawned contexts also push/pop $@, $!, $?

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Change how contexts are stacked
+    - More/better messages when contexts are abused
+    - better handling of $@, $!, and $?
     - Add pre_filter and pre_unfilter to Hubs
 
 0.000019  2016-01-12 16:08:11-08:00 America/Los_Angeles
