--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix bug where default diagnostics were not shown for subtests.
+
 0.000020  2016-01-14 21:52:43-08:00 America/Los_Angeles
 
     - Change how contexts are stacked
