--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix test that broke in the last release (oops)
+
 0.000021  2016-01-18 10:54:54-08:00 America/Los_Angeles
 
     - Fix bug where default diagnostics were not shown for subtests.
