--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Documentation updates
+    - Typo fixes (thanks rjbs)
     - Minor enhancement to test tools
 
 0.000022  2016-01-18 11:58:40-08:00 America/Los_Angeles
