--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Formally add the warning and exception tools
+    - warning and exception tools added to the extended bundle
+
 0.000018  2016-01-12 16:09:44-08:00 America/Los_Angeles
 
     - Add grab tool
