--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix test that needs to be conditional
+    - Fix constant in NoIso
+
 0.000002  2016-02-03 08:12:34-08:00 America/Los_Angeles
 
     - Major overhaul
