Add spec bundle

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add Spec bundle
+
 0.000003  2016-02-04 10:46:41-08:00 America/Los_Angeles
 
     - Fix test that needs to be conditional
