--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Minor doc fixes
+
 0.000020  2016-02-05 09:32:52-08:00 America/Los_Angeles
 
     - Fix typo that made mock tool look in the wrong place for handlers
