--- a/README
+++ b/README
@@ -10,42 +10,38 @@ SYNOPSYS
         use Test2::Bundle::Extended;
         use Test2::Tools::AsyncSubtest;
 
-        my $ast = subtest_start('ast');
-
-        subtest_run $ast => sub {
-            ok(1, "not concurrent A");
+        my $ast1 = async_subtest local => sub {
+            ok(1, "Inside subtest");
         };
 
-        ok(1, "Something else");
-
-        subtest_run $ast => sub {
-            ok(1, "not concurrent B");
+        my $ast2 = fork_subtest child => sub {
+            ok(1, "Inside subtest in another process");
         };
 
-        ok(1, "Something else");
+        my $ast3 = thread_subtest thread => sub {
+            ok(1, "Inside subtest in a thread");
+        };
 
-        subtest_finish($ast);
+        # You must call finish on the subtests you create. Finish will wait/join on
+        # any child processes and threads.
+        $ast1->finish;
+        $ast2->finish;
+        $ast3->finish;
 
         done_testing;
 
 EXPORTS
     Everything is exported by default.
 
-    $ast = subtest_start($name)
-        Create a new async subtest. $ast will be an instance of
-        Test2::AsyncSubtest.
+    $ast = async_subtest $name
+    $ast = async_subtest $name => sub { ... }
+        Create an async subtest. Run the codeblock if it is provided.
 
-    $passing = subtest_run($ast, sub { ... })
-        Run the provided codeblock from inside the async subtest. This can
-        be called any number of times, and can be called from any process or
-        thread spawned after $ast was created.
+    $ast = fork_subtest $name => sub { ... }
+        Create an async subtest. Run the codeblock in a forked process.
 
-    $passing = subtest_finish($ast)
-        This will finish the async subtest and send the final
-        Test2::Event::Subtest event to the current hub.
-
-        Note: This must be called in the thread/process that created the
-        Async Subtest.
+    $ast = thread_subtest $name => sub { ... }
+        Create an async subtest. Run the codeblock in a thread.
 
 NOTES
     Async Subtests are always buffered.
