--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Require newer Test2
+    - Add extended skip_all tests
+    - Add version to all modules (autarch)
+
 0.000003  2016-03-05 17:33:15-08:00 America/Los_Angeles
 
     - Update for min threads version
