--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add ability to bypass subtest skip_all flow control
+
 0.000004  2016-03-06 20:19:02-08:00 America/Los_Angeles
 
     - Require newer Test2
