--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Skip test added in last release when threading is not avilable
+
 1.302013_013 2016-03-08 09:19:39-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Test::Builder->reset now resets hub's idea of root pid/tid (#637)
